--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="large_text">#8b8da1</color>
+    <color name="small_text">#b7b5c1</color>
+    <color name="card_background">#ffffff</color>
+    <color name="screen_background">#fbfbfd</color>
 </resources>
