--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -42,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:ellipsize="end"
+                android:singleLine="true"
                 android:text="Loading..."
                 android:textColor="@color/large_text"
                 android:textSize="20sp"
@@ -59,6 +60,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:ellipsize="end"
+                android:singleLine="true"
                 android:text="Loading..."
                 android:textColor="@color/large_text"
                 android:textSize="20sp"
@@ -75,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:ellipsize="end"
+                android:singleLine="true"
                 android:text="Loading..."
                 android:textColor="@color/small_text"
                 android:textSize="18sp"
